# aiagents

./: .env  .gitignore  Agent_Character.md  Agent_StateKeeper.md  GCP_Deployment_Guide.md  PRD.md  PRD2.md  README.md  READTHISFILEFIRST.md  build-and-push.sh  check-agents.sh  deploy_gcp.sh  domaindata.md  fix_tf.py  generate_assets.py  mvp_v1.md  run-local.sh  test_adk_part.py  update_tf.py  ux.md
.gemini/: settings.json
agent-createcharacter/: Dockerfile  agent.py  cloudbuild.yaml  requirements.txt
agent-createworld/: agent.py  cloudbuild.yaml
agent-narrative/: agent.py  cloudbuild.yaml
agent-optiongeneration/: agent.py  cloudbuild.yaml  requirements.txt
agentdefinitions/: Agent_Recap.md  Agent_SessionNarrator.md  Agent_WorldBuilder.md
agents/: pyproject.toml
agents/character_creator/: agent.py
agents/session_narrator/: agent.py
agents/world_builder/: agent.py  test_agent.py
backend/: main.py  requirements.txt  test_db.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
documentation/: CONDUCTOR_BEST_PRACTISES.md  Closing session - Vibe coding with google 1.md  Setup_gemini_cli.md  adk.md  archi.md  deployment_architecture.md.resolved
frontend/: package-lock.json  package.json
frontend-web/: Dockerfile  cloudbuild.yaml  main.py  media_service.py  requirements.txt
mcp-server/: Dockerfile  cloudbuild.yaml  database.py  requirements.txt  server.py  test_db.json
terraform/: cloudbuild.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
tools/: README.md  preload_story_assets.py  requirements.txt  (+1 more)
(+40 files in other folders)
